saved latest blog page changes

--- a/webfund/fakeblog/index.html
+++ b/webfund/fakeblog/index.html
@@ -13,6 +13,7 @@
                 </td>
             </tr>
         </table>
+        <p></p>
         <div id="importantdates">
             <table border="1">
                 <tr>
@@ -41,17 +42,77 @@
                     <td>Watney conducts preparations to travel to Schiaparelli Crater, where he can launch the Ares 4 MAV to rendezvous with Hermes.</td>
                 </tr>
                 <tr>
-                    <td>02-09-2037 to 04-08-2037</td>
-                    <td>192 to 448</td>
-                    <td>Watney conducts preparations to travel to Schiaparelli Crater, where he can launch the Ares 4 MAV to rendezvous with Hermes.</td>
+                    <td>02-09-2037 to 04-07-2037</td>
+                    <td>449 to 505</td>
+                    <td>Watney travels to Schiaparelli Crater, where he can launch the Ares 4 MAV to rendezvous with Hermes.</td>
                 </tr>
-
-
-
-
+                <tr>
+                    <td>04-08-2037 to 05-22-2037</td>
+                    <td>506 to 548</td>
+                    <td>Watney conducts preparations to leave Mars aboard the Ares 4 MAV and rendezvous with Hermes.</td>
+                </tr>
+                <tr>
+                    <td>05-23-2037</td>
+                    <td>549</td>
+                    <td>Watney launches in the Ares 4 MAV and is rescued by the Hermes crew.</td>
+                </tr>
             </table>
+            <br>
+            <ul>
+                <li>07-07-2035 - Ares 3 launches from Earth</li>
+                <li>11-07-2035 - Ares 3 lands on Mars</li>
+                <li>11-12-2035 - Ares 3 crew is forced to leave Mars without Mark Watney due to a severe dust storm.</li>
+                <li>02-13-2036 - Watney reestablishes contact with Earth using the Pathfinder probe.</li>
+                <li>02-09-2037 - Watney leaves Ares 3 site and travels to Ares 4 site</li>
+                <li>04-07-2037 - Watney arrives at Ares 4 site</li>
+                <li>05-23-2037 - Watney launches in the Ares 4 MAV and leaves Mars</li>
+            </ul>
         </div>
-
+        <a href="https://www.youtube.com/watch?v=ej3ioOneTy8">Click For Awesome Highlight Video</a>
+        <h2>Please take this short survey</h2>
+        <table>
+            <tr>
+                <td>
+                    <label for="email">Email:</label>
+                </td>
+                <td>
+                    <input type="text" id="email" name="email">
+                </td>
+            </tr>
+        </table>
+        <table width="600">
+            <tr>
+                <td>
+                    <input type="radio" id="yes" name="choice" value="Yes"> Yes, please send me lots of emails
+                    <input type="radio" id="no" name="choice" value="No"> No, please do not send me any emails
+                </td>
+            </tr>
+        </table>
+        <p></p>
+        <table width="600">
+            <tr>
+                <td>
+                    How did you hear about us?
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" name="heard1" value="Facebook">Facebook
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" name="heard2" value="Newspaper">Newspaper
+                </td>
+            </tr>
+            <tr>
+                <td>    
+                    <input type="checkbox" name="heard3" value="Referral">Referral
+                </td>
+            </tr>
+        </table>
+        <button>Submit</button>
+            
 
 
     </body>
