--- a/webfund/portfolio/index.html
+++ b/webfund/portfolio/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Javascript Basics</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div class="wrapper">
       <div id="top">
-        <div id="topleft"></div>
-        <div id="topright"></div>
+        <div id="topleft">Jayne Doe</div>
+        <div id="topright">Master of shadows and the Internet!</div>
       </div>
       <div id="main">
+          <div id="maintop">
+            <div id="maintopleft">
+              <img src="img/photo_of_me.jpg" alt="look at me" height="100" width="100">
+            </div>
+            <div id="maintopright"></div>           
+          </div>
       </div>
     </div><!-- end of wrapper -->
   </body>
