--- a/webfund/portfolio/index.html
+++ b/webfund/portfolio/index.html
@@ -11,12 +11,88 @@
         <div id="topright">Master of shadows and the Internet!</div>
       </div>
       <div id="main">
-          <div id="maintop">
-            <div id="maintopleft">
-              <img src="img/photo_of_me.jpg" alt="look at me" height="100" width="100">
-            </div>
-            <div id="maintopright"></div>           
+        <div id="maintop">
+          <div id="maintopleft">
+            <img src="img/photo_of_me.jpg" alt="look at me" height="100" width="100">
           </div>
+          <div id="maintopright">
+            <h2 class="gradientheader">About...</h2>
+            <div>
+              <p>
+                Hello! I'm an extremely driven and creative Full Stack Developer who is currently open for career opportunities as a front-end or back-end web developer in the Greater Seattle Area.
+              </p>
+              <p>
+                I'm a recent graduate of Coding Dojo, a coding school located in Bellevue, WA that teaches 3 full stacks in 3 months. I'm capable of learning new technologies very quickly, and am always looking for opportunities to further expand my skills and grow as a developer.
+              </p>
+              <p>
+                <a href="nothing.html">Continue reading...</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div id="mainbottom">
+          <div id="mainbottomleft">
+            <h2 class="gradientheader">La Mode</h2>
+            <img src="img/lamode.png" alt="look at me" height="100" width="100">
+            <p>
+              La Mode is an Ecommerce website for designed to market various clothing products. Users are able to view the available garments, select their desired quantity, and compile a shopping cart for making a final puchase.
+            </p>
+            <h2 class="gradientheader">Technologies:</h2>
+            <div id="mblgrid">
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>              
+            </div>
+          </div>
+          <div id="mainbottomcenter">
+            <h2 class="gradientheader">Family Contacts</h2>
+            <img src="img/familycontacts.png" alt="look at me" height="100" width="100">
+            <p>
+              Family Contacts is afree application for managing, sharing, and visualizing your family relationships for both extended and immediate family. As an essential feature of the project, your log-in information determines who can see and reveals how people are related to you.
+            </p>
+            <h2 class="gradientheader">Technologies:</h2>
+            <div id="mbcgrid">
+            </div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>     
+          </div>
+          <div id="mainbottomright">
+            <h2 class="gradientheader">fiveEleven</h2>
+
+            <img src="img/fiveEleven.png" alt="look at me" height="100" width="100">
+            <p>
+              Five Eleven is a data visualization project built on the Python software stack. The application transforms the developer job-hunt into a more visual, user friendly experience. Based on location, technology popularity, and other vast data sets, users may easily visualize the varying sizes and concentrations of the junior developer job market across the nation.
+            </p>            
+            <h2 class="gradientheader">Technologies:</h2>
+            <div id="mbrgrid">
+            </div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>
+              <div class="pinkdiv"></div>     
+          </div>
+        </div>
       </div>
     </div><!-- end of wrapper -->
   </body>
