afternoon push of work

--- a/webfund/portfolio/index.html
+++ b/webfund/portfolio/index.html
@@ -13,7 +13,7 @@
       <div id="main">
         <div id="maintop">
           <div id="maintopleft">
-            <img src="img/photo_of_me.jpg" alt="look at me" height="100" width="100">
+            <img src="img/photo_of_me.jpg" alt="look at me" height="250" width="380">
           </div>
           <div id="maintopright">
             <h2 class="gradientheader">About...</h2>
@@ -33,7 +33,7 @@
         <div id="mainbottom">
           <div id="mainbottomleft">
             <h2 class="gradientheader">La Mode</h2>
-            <img src="img/lamode.png" alt="look at me" height="100" width="100">
+            <img src="img/lamode.png" alt="look at me" height="160" width="310">
             <p>
               La Mode is an Ecommerce website for designed to market various clothing products. Users are able to view the available garments, select their desired quantity, and compile a shopping cart for making a final puchase.
             </p>
@@ -53,7 +53,7 @@
           </div>
           <div id="mainbottomcenter">
             <h2 class="gradientheader">Family Contacts</h2>
-            <img src="img/familycontacts.png" alt="look at me" height="100" width="100">
+            <img src="img/familycontacts.png" alt="look at me" height="160" width="310">
             <p>
               Family Contacts is afree application for managing, sharing, and visualizing your family relationships for both extended and immediate family. As an essential feature of the project, your log-in information determines who can see and reveals how people are related to you.
             </p>
@@ -74,7 +74,7 @@
           <div id="mainbottomright">
             <h2 class="gradientheader">fiveEleven</h2>
 
-            <img src="img/fiveEleven.png" alt="look at me" height="100" width="100">
+            <img src="img/fiveEleven.png" alt="look at me" height="160" width="310">
             <p>
               Five Eleven is a data visualization project built on the Python software stack. The application transforms the developer job-hunt into a more visual, user friendly experience. Based on location, technology popularity, and other vast data sets, users may easily visualize the varying sizes and concentrations of the junior developer job market across the nation.
             </p>            
@@ -93,6 +93,8 @@
               <div class="pinkdiv"></div>     
           </div>
         </div>
+      </div>
+      <div id="footer">
       </div>
     </div><!-- end of wrapper -->
   </body>
