another afternoon push of styling work

--- a/webfund/portfolio/index.html
+++ b/webfund/portfolio/index.html
@@ -16,7 +16,7 @@
             <img src="img/photo_of_me.jpg" alt="look at me" height="250" width="380">
           </div>
           <div id="maintopright">
-            <h2 class="gradientheader">About...</h2>
+            <h3 class="gradientheader">About...</h3>
             <div>
               <p>
                 Hello! I'm an extremely driven and creative Full Stack Developer who is currently open for career opportunities as a front-end or back-end web developer in the Greater Seattle Area.
@@ -32,65 +32,131 @@
         </div>
         <div id="mainbottom">
           <div id="mainbottomleft">
-            <h2 class="gradientheader">La Mode</h2>
-            <img src="img/lamode.png" alt="look at me" height="160" width="310">
+            <h3 class="gradientheader">La Mode</h3>
+            <img src="img/lamode.png" alt="look at me" height="145" width="275">
             <p>
               La Mode is an Ecommerce website for designed to market various clothing products. Users are able to view the available garments, select their desired quantity, and compile a shopping cart for making a final puchase.
             </p>
-            <h2 class="gradientheader">Technologies:</h2>
+            <h3 class="gradientheader">Technologies:</h3>
             <div id="mblgrid">
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>              
+              <div class="icondiv">
+                <img src="img/php.png" alt="php" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/codeigniter.png" alt="codeigniter" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/jQuery.png" alt="jQuery" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/ajax.png" alt="ajax" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/mysql.png" alt="mysql" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/HTML.png" alt="html" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/CSS.png" alt="css" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/bootstrap.png" alt="bootstrap" height="40" width="40">
+              </div>
+              <div class="icondiv">
+
+              </div>
+              <div class="icondiv">
+
+              </div>              
+            </div>
+            <div class="mbbutton">
+              <button>La Mode</button>    
             </div>
           </div>
           <div id="mainbottomcenter">
-            <h2 class="gradientheader">Family Contacts</h2>
-            <img src="img/familycontacts.png" alt="look at me" height="160" width="310">
+            <h3 class="gradientheader">Family Contacts</h3>
+            <img src="img/familycontacts.png" alt="look at me" height="145" width="275">
             <p>
               Family Contacts is afree application for managing, sharing, and visualizing your family relationships for both extended and immediate family. As an essential feature of the project, your log-in information determines who can see and reveals how people are related to you.
             </p>
-            <h2 class="gradientheader">Technologies:</h2>
+            <h3 class="gradientheader">Technologies:</h3>
             <div id="mbcgrid">
+              <div class="icondiv">
+                <img src="img/JavaScript.png" alt="javascript" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/mongodb.png" alt="mongodb" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/expressjs.png" alt="expressjs" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/angular.png" alt="angular" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/nodejs.png" alt="nodejs" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/HTML.png" alt="html" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/CSS.png" alt="css" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/socket.png" alt="socket" height="40" width="40">
+              </div>
+              <div class="icondiv">
+              </div>
+              <div class="icondiv">
+              </div>       
             </div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>     
+            <div class="mbbutton">
+              <button>Family Contacts</button>    
+            </div>
           </div>
           <div id="mainbottomright">
-            <h2 class="gradientheader">fiveEleven</h2>
+            <h3 class="gradientheader">fiveEleven</h3>
 
-            <img src="img/fiveEleven.png" alt="look at me" height="160" width="310">
+            <img src="img/fiveEleven.png" alt="look at me" height="145" width="275">
             <p>
               Five Eleven is a data visualization project built on the Python software stack. The application transforms the developer job-hunt into a more visual, user friendly experience. Based on location, technology popularity, and other vast data sets, users may easily visualize the varying sizes and concentrations of the junior developer job market across the nation.
             </p>            
-            <h2 class="gradientheader">Technologies:</h2>
+            <h3 class="gradientheader">Technologies:</h3>
             <div id="mbrgrid">
+              <div class="icondiv">
+                <img src="img/python.png" alt="python" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/django.png" alt="django" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/d3.png" alt="d3" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/angular.png" alt="angular" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/sqlite.png" alt="sqlite" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/HTML.png" alt="html" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/CSS.png" alt="css" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/JavaScript.png" alt="javascript" height="40" width="40">
+              </div>
+              <div class="icondiv">
+                <img src="img/materialize.png" alt="materialize" height="40" width="40">
+              </div>
+              <div class="icondiv">
+              </div>     
             </div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>
-              <div class="pinkdiv"></div>     
+            <div class="mbbutton">
+              <button>fiveEleven</button>    
+            </div>
           </div>
         </div>
       </div>
