--- a/webfund/portfolio/index.html
+++ b/webfund/portfolio/index.html
@@ -33,11 +33,11 @@
         <div id="mainbottom">
           <div id="mainbottomleft">
             <h3 class="gradientheader">La Mode</h3>
-            <img src="img/lamode.png" alt="look at me" height="145" width="275">
+            <img src="img/lamode.png" alt="la mode" height="145" width="275">
             <p>
               La Mode is an Ecommerce website for designed to market various clothing products. Users are able to view the available garments, select their desired quantity, and compile a shopping cart for making a final puchase.
             </p>
-            <h3 class="gradientheader">Technologies:</h3>
+            <h4 class="gradientheader">Technologies:</h3>
             <div id="mblgrid">
               <div class="icondiv">
                 <img src="img/php.png" alt="php" height="40" width="40">
@@ -76,11 +76,11 @@
           </div>
           <div id="mainbottomcenter">
             <h3 class="gradientheader">Family Contacts</h3>
-            <img src="img/familycontacts.png" alt="look at me" height="145" width="275">
+            <img src="img/familycontacts.png" alt="family  contacts" height="145" width="275">
             <p>
               Family Contacts is afree application for managing, sharing, and visualizing your family relationships for both extended and immediate family. As an essential feature of the project, your log-in information determines who can see and reveals how people are related to you.
             </p>
-            <h3 class="gradientheader">Technologies:</h3>
+            <h4 class="gradientheader">Technologies:</h3>
             <div id="mbcgrid">
               <div class="icondiv">
                 <img src="img/JavaScript.png" alt="javascript" height="40" width="40">
@@ -118,11 +118,11 @@
           <div id="mainbottomright">
             <h3 class="gradientheader">fiveEleven</h3>
 
-            <img src="img/fiveEleven.png" alt="look at me" height="145" width="275">
+            <img src="img/fiveEleven.png" alt="fiveeleven" height="145" width="275">
             <p>
               Five Eleven is a data visualization project built on the Python software stack. The application transforms the developer job-hunt into a more visual, user friendly experience. Based on location, technology popularity, and other vast data sets, users may easily visualize the varying sizes and concentrations of the junior developer job market across the nation.
             </p>            
-            <h3 class="gradientheader">Technologies:</h3>
+            <h4 class="gradientheader">Technologies:</h3>
             <div id="mbrgrid">
               <div class="icondiv">
                 <img src="img/python.png" alt="python" height="40" width="40">
@@ -161,6 +161,19 @@
         </div>
       </div>
       <div id="footer">
+        <p>
+          jdoe@gmails.com | 206-555-1212
+        </p>
+        <p>
+          <img src="img/github.png" alt="github" height="20" width="20">
+          <span class="italund">jaynedev</span>
+          <img src="img/linkedin.png" alt="linkedin" height="20" width="20">
+          <span class="italund">jayne-doe</span>
+          <img src="img/twitter.png" alt="twitter" height="20" width="20">
+          <span class="italund">jdtweets</span>
+          <img src="img/codepen.png" alt="codepen" height="20" width="20">
+          <span class="italund">jaynedev</span>
+        </p>
       </div>
     </div><!-- end of wrapper -->
   </body>
