final commit after w3 validator checks.  i'm done.

--- a/webfund/portfolio/index.html
+++ b/webfund/portfolio/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
   </head>
   <body>
     <div class="wrapper">
@@ -37,7 +38,7 @@
             <p>
               La Mode is an Ecommerce website for designed to market various clothing products. Users are able to view the available garments, select their desired quantity, and compile a shopping cart for making a final puchase.
             </p>
-            <h4 class="gradientheader">Technologies:</h3>
+            <h4 class="gradientheader">Technologies:</h4>
             <div id="mblgrid">
               <div class="icondiv">
                 <img src="img/php.png" alt="php" height="40" width="40">
@@ -80,7 +81,7 @@
             <p>
               Family Contacts is afree application for managing, sharing, and visualizing your family relationships for both extended and immediate family. As an essential feature of the project, your log-in information determines who can see and reveals how people are related to you.
             </p>
-            <h4 class="gradientheader">Technologies:</h3>
+            <h4 class="gradientheader">Technologies:</h4>
             <div id="mbcgrid">
               <div class="icondiv">
                 <img src="img/JavaScript.png" alt="javascript" height="40" width="40">
@@ -122,7 +123,7 @@
             <p>
               Five Eleven is a data visualization project built on the Python software stack. The application transforms the developer job-hunt into a more visual, user friendly experience. Based on location, technology popularity, and other vast data sets, users may easily visualize the varying sizes and concentrations of the junior developer job market across the nation.
             </p>            
-            <h4 class="gradientheader">Technologies:</h3>
+            <h4 class="gradientheader">Technologies:</h4>
             <div id="mbrgrid">
               <div class="icondiv">
                 <img src="img/python.png" alt="python" height="40" width="40">
