middle section done - push

--- a/webfund/aboutpython/index.html
+++ b/webfund/aboutpython/index.html
@@ -80,7 +80,40 @@
                 </div>
             </div>
             <div id="middle">
-
+                <div id="midLeft">
+                    <div id="mLcontainer">
+                        <div id="mLRule"></div>
+                        <div id="mLHeader" class="mHStyling">Getting Started</div>
+                        <div id="mLParagraph" class="mPStyling" align="center">
+                            Python can be easy to pick up whether you're a first time programmer or you're experienced with other languages. The following pages are a useful first step to getg on your way writing programs with Python!
+                        </div>
+                        <div id="mLList" class="mLStyling">
+                            <ul>
+                                <li><span class="mLSpanStyle">Beginner's Guide, Programmers</span></li>
+                                <li><span class="mLSpanStyle">Beginner's Guide, Non-Programmers</span></li>
+                                <li><span class="mLSpanStyle">Code sample and snippets for Beginners</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div id="midRight">
+                    <div id="mRcontainer">
+                        <div id="mRRule"></div>
+                        <div id="mRHeader" class="mHStyling">Applications</div>
+                        <div id="mRParagraph" class="mPStyling" align="center">
+                            The <span id="pyspan">Python Package Index (PyPi)</span> hosts thousands of third-party modules for Python. Both Python's standard library and the community-contributed modules allow for endless possibilities.
+                        </div>
+                        <div id="mRList" class="mLStyling">
+                            <ul>
+                                <li><span class="mLSpanStyle">Web and Internet Development</span></li>
+                                <li><span class="mLSpanStyle">Database Access</span></li>
+                                <li><span class="mLSpanStyle">Desktop GUIs</span></li>
+                                <li><span class="mLSpanStyle">Network Programming</span></li>
+                                <li><span class="mLSpanStyle">software and Game Development</span></li>
+                            </ul>
+                        </div>
+                    </div>                
+                </div>            
             </div>
             <div id="footer"></div>
         </div>
