final push and i'm done

--- a/webfund/aboutpython/index.html
+++ b/webfund/aboutpython/index.html
@@ -10,19 +10,19 @@
             <div id="top">
                 <div id="topleft">
                     <div id="imgdiv">
-                        <img src="img/python.png" alt="python" height="92" width="335"></img>
+                        <img src="img/python.png" alt="python" height="92" width="335">
                     </div>
                 </div>
                 <div id="topright">
                     <div id="trl1">
                         <span>Text Size: </span>
-                        <span>Normal</a> | 
-                        <span>Large</a>
+                        <span>Normal</span> | 
+                        <span>Large</span>
                     </div>
                     <div id="trl2">
                         <div id="trl2outer">
                             <div id="searchdiv">
-                                <input type="text" placeholder="Search"></input>
+                                <input type="text" placeholder="Search">
                                 <button>GO</button>
                             </div>
                         
@@ -41,40 +41,40 @@
 
                 </div>
                 <div id="topTOC">
-                    <div class="TOCLine" align="center">
-                        <span class="TOCSpanStyling1">&#187</span><span class="TOCSpanStyling2">Docs</span>
+                    <div class="TOCLine">
+                        <span class="TOCSpanStyling1">&#187;</span><span class="TOCSpanStyling2">Docs</span>
                     </div>
-                    <div class="TOCLine" align="center">
-                        <span class="TOCSpanStyling1">&#187</span><span class="TOCSpanStyling2">Audio/Visual Talks</span>
+                    <div class="TOCLine">
+                        <span class="TOCSpanStyling1">&#187;</span><span class="TOCSpanStyling2">Audio/Visual Talks</span>
                     </div>
-                    <div class="TOCLine" align="center">
-                        <span class="TOCSpanStyling1">&#187</span><span class="TOCSpanStyling2">Beginner's Guide</span>
+                    <div class="TOCLine">
+                        <span class="TOCSpanStyling1">&#187;</span><span class="TOCSpanStyling2">Beginner's Guide</span>
                     </div>
-                    <div class="TOCLine" align="center">
-                        <span class="TOCSpanStyling1">&#187</span><span class="TOCSpanStyling2">Developer's Guide</span>
+                    <div class="TOCLine">
+                        <span class="TOCSpanStyling1">&#187;</span><span class="TOCSpanStyling2">Developer's Guide</span>
                     </div>
-                    <div class="TOCLine" align="center">
-                        <span class="TOCSpanStyling1">&#187</span><span class="TOCSpanStyling2">PEP Index</span>
+                    <div class="TOCLine">
+                        <span class="TOCSpanStyling1">&#187;</span><span class="TOCSpanStyling2">PEP Index</span>
                     </div>
-                    <div class="TOCLine" align="center">
-                        <span class="TOCSpanStyling1">&#187</span><span class="TOCSpanStyling2">Python Books</span>
+                    <div class="TOCLine">
+                        <span class="TOCSpanStyling1">&#187;</span><span class="TOCSpanStyling2">Python Books</span>
                     </div>
-                    <div class="TOCLine" align="center">
-                        <span class="TOCSpanStyling1">&#187</span><span class="TOCSpanStyling2">FAQ</span>
+                    <div class="TOCLine">
+                        <span class="TOCSpanStyling1">&#187;</span><span class="TOCSpanStyling2">FAQ</span>
                     </div>
                 </div>
                 <div id="topBody">
-                    <div id="tBtop" align="center">
+                    <div id="tBtop">
                         First appearing in 1991, Python is a general-purpose, high-level, interpreted programming language whose design focus emphasizes code readability. Whether for processing/analyzing data to powering many well-known applications, Python is not only a great language for new pregrammers but also powerful enough for seasoned developers building whatever they can think of.
                     </div>
-                    <div id="tBmiddle" align="center">
+                    <div id="tBmiddle">
                         <p>Beautiful is better than ugly;</p>
                         <p>Explicit is better than implicit;</p>
                         <p>Simple is better than complex;</p>
                         <p>Complex is better than complicated;</p>
                         <p>Readability counts;</p>
                     </div>
-                    <div id="tBbottom" align="center">
+                    <div id="tBbottom">
                         <p>The Zen of Python</p>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     <div id="mLcontainer">
                         <div id="mLRule"></div>
                         <div id="mLHeader" class="mHStyling">Getting Started</div>
-                        <div id="mLParagraph" class="mPStyling" align="center">
+                        <div id="mLParagraph" class="mPStyling">
                             Python can be easy to pick up whether you're a first time programmer or you're experienced with other languages. The following pages are a useful first step to getg on your way writing programs with Python!
                         </div>
                         <div id="mLList" class="mLStyling">
@@ -100,7 +100,7 @@
                     <div id="mRcontainer">
                         <div id="mRRule"></div>
                         <div id="mRHeader" class="mHStyling">Applications</div>
-                        <div id="mRParagraph" class="mPStyling" align="center">
+                        <div id="mRParagraph" class="mPStyling">
                             The <span id="pyspan">Python Package Index (PyPi)</span> hosts thousands of third-party modules for Python. Both Python's standard library and the community-contributed modules allow for endless possibilities.
                         </div>
                         <div id="mRList" class="mLStyling">
@@ -109,13 +109,20 @@
                                 <li><span class="mLSpanStyle">Database Access</span></li>
                                 <li><span class="mLSpanStyle">Desktop GUIs</span></li>
                                 <li><span class="mLSpanStyle">Network Programming</span></li>
-                                <li><span class="mLSpanStyle">software and Game Development</span></li>
+                                <li><span class="mLSpanStyle">Software and Game Development</span></li>
                             </ul>
                         </div>
                     </div>                
                 </div>            
             </div>
-            <div id="footer"></div>
+            <div id="footer">
+                <div id="footline1">
+                    <div id="foot1" class="footstyle1">Help and General Contact</div>
+                    <div id="foot2" class="footstyle1">Diversity Initiatives</div>
+                    <div id="foot3" class="footstyle1">Submit Website Bugs</div>
+                </div>
+                <div id="footline2" class="footstyle2">Copyright &#64;2001-2018</div>            
+            </div>
         </div>
     </body>
 </html>
