top section done

--- a/webfund/belt-exam/index.html
+++ b/webfund/belt-exam/index.html
@@ -15,10 +15,10 @@
                     <a id="mnuForums" class="menubar">Forums</a>                    
                     <a id="mnuSupport" class="menubar">Support</a>                    
                     <a id="mnuContact" class="menubar">Contact</a>
-
                 </div>
                 <div id="topsearchbox">
-
+                    <input type="text" id="searchtext">
+                    <img src="img/menu_icon2.png" id="searchbutton">
                 </div>
             </div>
             <div id="middle"></div>
