middle section done

--- a/webfund/belt-exam/index.html
+++ b/webfund/belt-exam/index.html
@@ -18,10 +18,27 @@
                 </div>
                 <div id="topsearchbox">
                     <input type="text" id="searchtext">
-                    <img src="img/menu_icon2.png" id="searchbutton">
+                    <div id="searchbutton"></div>
                 </div>
             </div>
-            <div id="middle"></div>
+            <div id="middle">
+                <div id="middletop"></div>
+                <div id="middlebottom">
+                    <div id="textcontainer">
+                        <a class="colorwhite middlebottomtext">Accordance 10</a>
+                        <a class="colorgray">/</a>
+                        <a class="colorblue middlebottomtext">Collections</a>
+                        <a class="colorgray">/</a>
+                        <a class="colorblue middlebottomtext">Accordance Advantage</a>
+                        <a class="colorgray">/</a>
+                        <a class="colorblue middlebottomtext">Mobile</a>
+                        <a class="colorgray">/</a>
+                        <a class="colorblue middlebottomtext">Windows</a>
+                        <a class="colorgray">/</a>
+                        <a class="colorblue middlebottomtext">Learn</a>
+                    </div>
+                </div>
+            </div>
             <div id="bottom"></div>
         </div>
     </body>
