bottom done. working on footer now.

--- a/webfund/belt-exam/index.html
+++ b/webfund/belt-exam/index.html
@@ -39,7 +39,55 @@
                     </div>
                 </div>
             </div>
-            <div id="bottom"></div>
+            <div id="bottom">
+                <div id="botrow1">
+                    <div id="br1left">
+                        <a id="br1label">Discover the Accordance Advantage</a>
+                    </div>
+                    <div id="br1right">
+                        <button id="br1button">Browse the Store&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#187;</button>
+                    </div>
+                </div>
+                <div id="botrow2">
+                    <div id="br2box1">
+                        <img src="img/content_icon1.png"  height="30" width="30">
+                        <a id="box1imglabel">Video Preview</a>
+                        <p id="box1paragraph">
+                            Check out the new introductory video for Accordance 10.
+                        </p>
+                        <img src="img/watch_now.png"  height="160" width="210">
+                        <button class="br2button">Watch Now</button>
+                    </div>
+                    <div id="br2box2">
+                        <img src="img/content_icon2.png"  height="30" width="30">
+                        <a id="box2imglabel">Tour of 10</a>
+                        <p id="box2paragraph">
+                            Learn about some of the powerful and exciting Bible study features that Accordance 10 offers.
+                        </p>
+                        <img src="img/take_the_tour.png"  height="146" width="210">
+                        <button class="br2button">Watch Now</button>
+                    </div>
+                    <div id="br2box3">
+                            <img src="img/content_icon3.png"  height="30" width="30">
+                            <a id="box3imglabel">Free Trial</a>
+                            <p id="box3paragraph">
+                                Download a free demo version of Accordance 10 with sample texts and tools for you to try out.
+                            </p>
+                            <img src="img/start_your_trial.png"  height="146" width="210">
+                            <button class="br2button">Start Your Trial</button>
+                    </div>
+                    <div id="br2box4">
+                        <img src="img/content_icon4.png"  height="30" width="30">
+                        <a id="box4imglabel">Ready to Buy</a>
+                        <p id="box4paragraph">
+                            Choose a collection and Discover the Accordance Advantage today.
+                        </p>
+                        <img src="img/find_products.png"  height="146" width="210">
+                        <button class="br2button">Find Products</button>
+                    </div>
+                </div>
+            </div>
+            <div id="footer"></div>
         </div>
     </body>
 </html>
