final push before validator

--- a/webfund/belt-exam/index.html
+++ b/webfund/belt-exam/index.html
@@ -87,7 +87,66 @@
                     </div>
                 </div>
             </div>
-            <div id="footer"></div>
+            <div id="footertop">
+                <div id="foot1">
+                    <p class="footheader">About</p>
+                    <hr>
+                    <p class="foottext">Accordance Advantage</p>
+                    <p class="foottext">Videos</p>
+                    <p class="foottext">Feature Tour</p>
+                    <p class="foottext">Endorsements</p>
+                    <p class="foottext">Reviews</p>
+                </div>
+                <div id="foot2">
+                    <p class="footheader">Platform</p>
+                    <hr>
+                    <p class="foottext">Accordance for Mac</p>
+                    <p class="foottext">Accordance for iOS</p>
+                    <p class="foottext">Accordance for Windows</p> 
+                </div>            
+                <div id="foot3">
+                        <p class="footheader">Store</p>
+                        <hr>
+                        <p class="foottext">Products</p>
+                        <p class="foottext">Upgrades</p>
+                        <p class="foottext">Purchase Options</p>
+                        <p class="foottext">New Releases</p>
+                        <p class="foottext">Current Specials</p>    
+                        <p class="foottext">Gift Card</p>    
+                </div>
+                <div id="foot4">
+                        <p class="footheader">Support</p>
+                        <hr>
+                        <p class="foottext">Sources of Supports</p>
+                        <p class="foottext">Podcasts</p>
+                        <p class="foottext">Help</p>
+                        <p class="foottext">Training Seminars</p>
+                        <p class="foottext">Articles</p>    
+                        <p class="foottext">Downloads</p>   
+                </div>
+                <div id="foot5">
+                        <p class="footheader">Community</p>
+                        <hr>
+                        <p class="foottext">Forums</p>
+                        <p class="foottext">Facebook</p>
+                        <p class="foottext">Twitter</p>
+                        <p class="foottext">YouTube</p>
+                        <p class="foottext">Promote Accordance</p>  
+                </div>
+                <div id="foot6">
+                        <p class="footheader">OakTree</p>
+                        <hr>
+                        <p class="foottext">Company</p>
+                        <p class="foottext">Contact</p>
+                        <p class="foottext">Press</p>
+                        <p class="foottext">Sitemap</p>
+
+
+                </div>
+            </div>
+            <div id="footerbottom">
+                <p id="bottomline">Toll Free (877) 339-5855 | <span id="bottomemail">orders@accordancebible.com</span> | &#64;2012 OakTree Software.</p>
+            </div>
         </div>
     </body>
 </html>
