media query research

--- a/webfund/mediaqueries/index.html
+++ b/webfund/mediaqueries/index.html
@@ -4,6 +4,7 @@
         <title>Test Media Queries</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="darkgraybox"><h1>@ media queries</h1></div>
