--- a/webfund/colorclicker/index.html
+++ b/webfund/colorclicker/index.html
@@ -15,14 +15,15 @@
         }
         $(document).ready(function () {
             $('#large_box').click(function () {
-                $(this).css('color', 'pink');
+                $(this).css('background-color', random_color());
+                $(this).children().css('background-color', random_color());
             })
             $('.side_box').click(function (event) {
-
+                $(this).siblings().css('background-color', random_color());
                 event.stopPropagation();
             })
             $('.middle_box').click(function (event) {
-
+                $(this).parent().css('background-color', random_color());
                 event.stopPropagation();
             })
         });
